# soap-rest-microservice-hotel

./: .gitignore  LICENSE  README-ESP.md  README.md  docker-compose.yml
api-rest/: .dockerignore  Dockerfile  README.md  index.js  jest.config.js  package-lock.json  package.json
api-rest/config/: db.js
api-rest/coverage/: lcov.info
api-rest/coverage/lcov-report/: index.html
api-rest/coverage/lcov-report/config/: db.js.html  index.html
api-rest/coverage/lcov-report/routes/: index.html  reservations.js.html
api-rest/routes/: reservations.js
api-rest/tests/: db.test.js  reservations.test.js  setup-example.js
microservice/: .dockerignore  Cargo.toml  README.md
microservice/src/: db.rs  handlers.rs  main.rs  models.rs
web-soap-service/: .env  Dockerfile  README.md  app.py  availability.wsdl  index.js  package-lock.json  package.json  requirements.txt
web-soap-service/config/: config.js  config.py
web-soap-service/coverage/: lcov.info
web-soap-service/coverage/lcov-report/: index.html
web-soap-service/coverage/lcov-report/web-soap-service/: index.html  index.js.html
web-soap-service/coverage/lcov-report/web-soap-service/config/: config.js.html  index.html
web-soap-service/coverage/lcov-report/web-soap-service/models/: availability.js.html  index.html
web-soap-service/db/: availability.json
web-soap-service/models/: availability.js
web-soap-service/tests/: availability.test.js  models.test.js
